Minor change in makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 a.out: y.tab.c lex.yy.c
 	@g++ -O3 lex.yy.c y.tab.c -w
-	@echo "Run the program as ./a.out input_file"
+	@echo "Run the program as ./a.out input_file output_file"
 
 y.tab.c: parser.y 
 	@yacc -d parser.y -Wnone
